namespace Core.Enums;

/// <summary>
/// Status possíveis de um pedido.
/// </summary>
public enum OrderStatus
{
    Pending    = 1,
    Paid       = 2,
    Processing = 3,
    Shipped    = 4,
    Delivered  = 5,
    Cancelled  = 6
}
